--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -2,8 +2,8 @@
   "name": "container",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "webpack serve --config config/webpack.dev.js"
+    },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
